# Semester-Project

./: CMakeLists.txt  ODE_PINN.ipynb  ODEsolvecpp  ODEsolvecpp_torch.cpp  README.md  requirements.txt
KANNs/: CMakeLists.txt  KANNs.cpp  LagrangeKANN.py  README  requirements.txt
